# sheetutils

./: .gitignore  README.md  pyproject.toml
sheetutils/: __init__.py
sheetutils/core/: cell.py  range.py  sheet.py  table.py  workbook.py
sheetutils/core/utils/: io.py  sheetops.py
test/data/: example-1.xls  example-1.xlsx
